erreur si champs vide enregistrement heros

--- a/superHeros/src/main/resources/application.properties
+++ b/superHeros/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/superHeros
+spring.datasource.url=jdbc:mysql://localhost:3306/superheros
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MariaDBDialect
 spring.datasource.username=root
